--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "typescript": "^5.2.2",
         "typescript-eslint": "^8.23.0",
         "vite": "^7.0.4",
-        "vue-tsc": "^2.2.4"
+        "vue-tsc": "^2.2.4",
+        "ziggy-js": "^2.6.0"
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.3.7",
