--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@laravel/vite-plugin-wayfinder": "^0.1.3",
         "@tailwindcss/vite": "^4.1.11",
         "@types/node": "^22.13.5",
+        "@types/toastr": "^2.1.43",
         "@vitejs/plugin-vue": "^6.0.0",
         "@vue/eslint-config-typescript": "^14.3.0",
         "concurrently": "^9.0.1",
@@ -40,8 +41,10 @@
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
         "reka-ui": "^2.6.1",
+        "sweetalert2": "^11.26.17",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
+        "toastr": "^2.1.4",
         "tw-animate-css": "^1.2.5",
         "vue": "^3.5.13",
         "vue-input-otp": "^0.3.2"
