Adds PBI XLSX import for shipments
Implements a new feature to import shipment data from Power BI/Excel XLSX files.

This allows administrators to quickly populate shipment information
by uploading a pre-formatted XLSX file exported from Power BI.

The import process handles data validation, date parsing, and
location matching, and provides error reporting for invalid rows.

Also includes a minor php version update.

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.10.1",
         "laravel/wayfinder": "^0.1.9",
         "league/csv": "^9.28",
+        "phpoffice/phpspreadsheet": "^5.4",
         "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-permission": "^6.24",
         "tightenco/ziggy": "^2.6"
