--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.3.7",
+        "@tinymce/tinymce-vue": "^6.3.0",
         "@vueuse/core": "^12.8.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -44,6 +45,7 @@
         "sweetalert2": "^11.26.17",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
+        "tinymce": "^8.3.2",
         "toastr": "^2.1.4",
         "tw-animate-css": "^1.2.5",
         "vue": "^3.5.13",
