--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "clsx": "^2.1.1",
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
+        "mapbox-gl": "^3.18.1",
         "reka-ui": "^2.6.1",
         "sweetalert2": "^11.26.17",
         "tailwind-merge": "^3.2.0",
