--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
         "toastr": "^2.1.4",
         "tw-animate-css": "^1.2.5",
         "vue": "^3.5.13",
-        "vue-input-otp": "^0.3.2"
+        "vue-input-otp": "^0.3.2",
+        "vue-multiselect": "^3.4.0",
+        "vue-sortable": "^0.1.3"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
