--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "phpoffice/phpspreadsheet": "^5.4",
         "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-permission": "^6.24",
+        "sweetalert2/laravel": "^1.3",
         "tightenco/ziggy": "^2.6"
     },
     "require-dev": {
