--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@inertiajs/vue3": "^2.3.7",
         "@tinymce/tinymce-vue": "^6.3.0",
         "@vueuse/core": "^12.8.2",
+        "chart.js": "^4.5.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "laravel-vite-plugin": "^2.0.0",
@@ -49,6 +50,7 @@
         "tinymce": "^8.3.2",
         "tw-animate-css": "^1.2.5",
         "vue": "^3.5.13",
+        "vue-chartjs": "^5.3.3",
         "vue-input-otp": "^0.3.2",
         "vue-multiselect": "^3.4.0",
         "vue-sortable": "^0.1.3"
