Improves admin UI/UX with Notiflix
Replaces SweetAlert2 with Notiflix for improved user notifications and confirmation dialogs across the admin interface. This provides a more consistent and visually appealing experience.

Updates carrier, location, rate, and role controllers to redirect to the "show" route after updates, providing immediate feedback to the user.

Also, adds exception handling for Mapbox API calls in the shipment controller, logging warnings for failed route fetches.

--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
         "mapbox-gl": "^3.18.1",
+        "notiflix": "^3.2.8",
         "reka-ui": "^2.6.1",
-        "sweetalert2": "^11.26.18",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
         "tinymce": "^8.3.2",
