--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "laravel-vite-plugin": "^2.0.0",
+        "lodash": "^4.17.23",
         "lucide-vue-next": "^0.468.0",
         "mapbox-gl": "^3.18.1",
         "notiflix": "^3.2.8",
